# tmpltool

./: .dockerignore  .editorconfig  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MINIJINJA_MIGRATION.md  Makefile.toml  README.md  README.md.backup  REMOVAL_PLAN.md  TODO.md  flake.nix  package-lock.json  package.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: _build-binaries.yml  _build-packages.yml  ci.yml  publish.yml  release.yml
.husky/: pre-commit
docs/: CICD.md  CLI.md  DEVELOPMENT.md  ERROR_HANDLING.md  EXAMPLES.md  FUNCTIONS.md  GAPS_AND_BLOCKERS.md  IDE_INTEGRATION.md  INSTALLATION.md  README.md  TEMPLATE_SYNTAX.md
docs/functions/: ARRAY.md  DATA.md  DATETIME.md  DEBUG.md  ENCODING.md  ENVIRONMENT.md  EXEC.md  FILESYSTEM.md  HASH_CRYPTO.md  KUBERNETES.md  LOGIC.md  MATH.md  OBJECT.md  PATH.md  PREDICATE.md  STATISTICS.md  STRING.md  SYSTEM_NETWORK.md  VALIDATION.md  WEB_URL.md
examples/: README.md  basic.tmpl  basic.tmpltool  comprehensive-app-config.tmpltool  config-with-defaults.tmpl  config.tmpl  datetime-functions.tmpl  docker-compose.tmpl  encoding.md.tmpltool  exec-functions.md.tmpltool  exec-functions.tmpl  exec-functions.tmpltool  greeting.tmpl  hash-crypto.tmpl  read-file.tmpl  read-file.tmpltool  read-file.txt.tmpltool  server-config.tmpltool  string-filters.tmpl  system-network.tmpl  test-filesystem.tmpl  test-filesystem.tmpltool  test-filesystem.txt.tmpltool  test-include.tmpl  test-include.tmpltool  test-include.txt.tmpltool  test-read.tmpl  test-read.tmpltool  test-read.txt.tmpltool
scripts/: create-dmg.sh
src/: cli.rs  context.rs  lib.rs  main.rs  renderer.rs  validator.rs
src/filter_functions/: array.rs  datetime.rs  encoding.rs  formatting.rs  hash.rs  kubernetes.rs  math.rs  mod.rs  object.rs  path.rs  serialization.rs  string.rs  traits.rs  url.rs
src/filters/: formatting.rs  mod.rs  string.rs
src/functions/: README.md  array.rs  builtins.rs  data_parsing.rs  datetime.rs  debug.rs  encoding.rs  env.rs  environment.rs  exec.rs  filesystem.rs  filter_env.rs  filters.rs  hash.rs  kubernetes.rs  logic.rs  math.rs  metadata.rs  mod.rs  network.rs  object.rs  predicates.rs  random.rs  random_string.rs  serialization.rs  statistics.rs  string.rs  system.rs  traits.rs  url.rs  uuid_gen.rs  validation.rs
src/is_functions/: datetime.rs  filesystem.rs  mod.rs  network.rs  traits.rs  validation.rs
tests/: common.rs  integration_tests.rs  test_advanced_array_functions.rs  test_array_extended_functions.rs  test_array_filter_functions.rs  test_array_functions.rs  test_cli_env_flag.rs  test_cli_ide_flag.rs  test_comprehensive.rs  test_context.rs  test_data_parsing_unit.rs  test_datetime_filter_functions.rs  test_datetime_functions.rs  test_datetime_unit.rs  test_debug_functions.rs  test_direct_var_access_fails.rs  test_edge_cases.rs  test_encoding_filter_functions.rs  test_encoding_functions.rs  test_env_with_default.rs  test_environment_unit.rs  test_environment_variable_substitution.rs  test_exec_functions.rs  test_filesystem_unit.rs  test_filter_env.rs  test_filter_env_unit.rs  test_filters_integration.rs  test_formatting_filters.rs  test_functions_registration.rs  test_hash_crypto_functions.rs  test_hash_filter_functions.rs  test_hash_unit.rs  test_invalid_template_syntax.rs  test_is_datetime.rs  test_is_filesystem.rs  test_is_functions_registration.rs  test_is_network.rs  test_is_validation.rs  test_kubernetes_extended_functions.rs  test_kubernetes_filter_functions.rs  (+39 more)
tests/fixtures/: README.md
tests/fixtures/expected/: comprehensive.txt  conditionals_false.txt  conditionals_true.txt  docker-compose.txt  filter_env.txt  include_base.txt  include_nested.txt  multiline.txt  with_default.txt  with_env.txt
tests/fixtures/templates/: comprehensive.tmpl  conditionals.tmpltool  direct_var.tmpltool  docker-compose.tmpltool  filter_env.tmpltool  include_base.tmpl  include_base.tmpltool  include_nested_level1.tmpl  (+9 more)
tests/integration/: README.md  common.sh  test_binary.sh
wix/: License.rtf  main.wxs
(+32 files in other folders)
