[package]
name = "tmpltool"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast and simple command-line template rendering tool using MiniJinja templates with environment variables"
repository = "https://github.com/bordeux/tmpltool"
readme = "README.md"
keywords = ["template", "minijinja", "cli", "environment", "variables"]
categories = ["command-line-utilities", "template-engine"]

[dependencies]
minijinja = { version = "2", features = ["builtins", "loader"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.19", features = ["v4"] }
rand = "0.9"
glob = "0.3"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
percent-encoding = "2"
chrono = "0.4"
