[package]
name = "tmpltool"
version = "1.4.2"
edition = "2024"
license = "MIT"
description = "A fast and simple command-line template rendering tool using MiniJinja templates with environment variables"
repository = "https://github.com/bordeux/tmpltool"
readme = "README.md"
keywords = ["template", "minijinja", "cli", "environment", "variables"]
categories = ["command-line-utilities", "template-engine"]

[dependencies]
minijinja = { version = "2", features = ["builtins", "loader", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.19", features = ["v4", "v7"] }
rand = "0.9"
glob = "0.3"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
percent-encoding = "2"
chrono = "0.4"
chrono-tz = "0.10"
hostname = "0.4"
whoami = "1.5"
dirs = "6.0"
if-addrs = "0.13"
base64 = "0.22"
hex = "0.4"
bcrypt = "0.17"
hmac = "0.12"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2"
predicates = "3"

[package.metadata.deb]
maintainer = "Chris Bednarczyk <tmpltool@bordeux.net>"
copyright = "2026, Chris Bednarczyk"
license-file = ["LICENSE", "0"]
extended-description = """\
A fast and simple command-line template rendering tool using MiniJinja \
(Jinja2-compatible) templates with environment variables. Features include \
hash generation (MD5, SHA1, SHA256, SHA512), filesystem operations, \
data parsing (JSON, YAML, TOML), validation functions, and more."""
section = "utils"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/tmpltool", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tmpltool/README.md", "644"],
    ["LICENSE", "usr/share/doc/tmpltool/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tmpltool", dest = "/usr/bin/tmpltool", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/tmpltool/README.md", mode = "0644" },
    { source = "LICENSE", dest = "/usr/share/doc/tmpltool/LICENSE", mode = "0644" },
]

[package.metadata.wix]
upgrade-guid = "E8B9F4A2-3C5D-4E6F-8A1B-2C3D4E5F6A7B"
path-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
license = false
eula = false
